# NoctiForge-Cli

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
src/: command.rs  main.rs
src/command/: trigger.rs
src/command/push/: custom.rs  mod.rs  rust.rs
