[package]
name = "noctiforge-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noctiForge"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
async-stream = "0"
async-trait = "0"
async_zip = { features = ["deflate", "tokio"], version = "0" }
clap = { version = "4", features = ["derive"] }
prost = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread", "process"] }
tokio-tar = "0"
tokio-util = { features = ["compat"], version = "0" }
toml = "0"
tonic = "0"
tonic-prost = "0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0"
reqwest = { version = "0", features = ["blocking"] }
